# e-commerce-product-search

./: .gitignore  README.MD  README_vi.md  dataset.py  eval.py  parameters.py  predict.py  pyproject.toml  quickstart.py  train.py
baseline/: .gitignore  EVALUATION_README.md  calc_w.py  compare2submit.py  eval.py  predict.py  predict.sh  run.sh  train.py  train.sh  voting.py
baseline/lib/: config_manager.py  dataset.py  dataset_v3.py  model.py  params.py  trainer.py  utils.py
baseline/scripts/: compress_submit.sh  eval.sh  eval_QI.sh  eval_simple_QI.sh  generate_configs.py  predict.sh  predict_QC.sh  predict_QI.sh  (+4 more)
baseline2/: eval.py  run.sh  train.py  train.sh
code-submission/: README.MD  requirements.txt
config/: predict_QC.json  predict_QC_XLMR.json  predict_QI.json  predict_QI_XLMR.json  train_QC.json  train_QC_XLMR.json  train_QI.json  train_QI_XLMR.json
data/: eda-QC.ipynb  eda-QI.ipynb  eda.py
deepspeed_configs/: ds_config_zero2.json
lib/: dataset_v1.py  dataset_v2.py  params.py
models/: README.md
predictions/: README.MD
scripts/: compress_submit.sh  compress_submit_XLMR.sh  predict_QC.sh  predict_QC_XLMR.sh  predict_QI.sh  preprocess.sh  train.sh  train_QC.sh  train_QC_s1.sh  train_QC_s2.sh  train_QI.sh  train_QI_s1.sh  train_QI_s2.sh
src/: dataset.py  dataset_v1.py  dataset_v2.py  dataset_v3.py  dataset_v4.py  gemma3.py  model.py  trainer.py
utils/: alibaba.py  alibaba2.py  alibaba3.py  alibaba4.py  category_tree)reconstruct.py  category_tree_reconstruct.py  compare2sub.py  heuristics.py  split.py  submission_check.py  translate.py
(+62 files in other folders)
