[project]
name = "product-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "transformers==4.48.2",
    "datasets~=2.21.0",
    "accelerate==1.0.0",
    "peft==0.12.0",
    "deepspeed==0.16.4",
    "torch>=2.0.1",
    "scikit-learn>=1.6.1",
    "setuptools>=80.9.0",
    "rich>=14.0.0",
    "langdetect>=1.0.9",
    "polyfuzz>=0.4.3",
    "translators>=5.9.3",
    "notebook>=7.4.4",
    "pandas>=2.3.1",
    "matplotlib>=3.9.4",
    "seaborn>=0.13.2",
]


[tool.uv.sources]
torch = [
  { index = "pytorch-cu121"},
]

torchvision = [
  { index = "pytorch-cu121"},
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
